src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_statements_tests__case_body_with_missing_semicolon.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error[E006]: Missing expected Token [KeywordSemicolon, KeywordColon]
  ┌─ <internal>:4:12
  │
4 │            END_CASE
  │            ^^^^^^^^ Missing expected Token [KeywordSemicolon, KeywordColon]

error[E007]: Unexpected token: expected KeywordSemicolon but found 'END_CASE'
  ┌─ <internal>:4:12
  │
4 │            END_CASE
  │            ^^^^^^^^ Unexpected token: expected KeywordSemicolon but found 'END_CASE'
